# lma2root

./: .dockerignore  .gitignore  BinaryDump.cpp  BinaryDump.h  CMakeLists.txt  Dockerfile  README.md  config-template.txt  lma2root.ps1  lma2root.sh  lma2root.sln  main.cpp  settingExample.txt
MyArchive/: MyArchive.h
MyDetektorHitSorter/: MyDetektorHitSorter.h  MyDetektorHitSorterAchim.cpp  MyDetektorHitSorterAchim.h  MyDetektorHitSorterAchimHex.cpp  MyDetektorHitSorterAchimHex.h  MyDetektorHitSorterAchimQuad.cpp  MyDetektorHitSorterAchimQuad.h  MyDetektorHitSorterHex.cpp  MyDetektorHitSorterHex.h  MyDetektorHitSorterSimple.cpp  helperfunctionsforDetSorter.h
MyDetektorHitSorter/AchimsRoutine/: resort64c.h
MyEventViewer/: MyEventViewer.cpp  MyEventViewer.h
MyFileProcessor/: MyFileProcessor.cpp  MyFileProcessor.h
MyPulsHistoFiller/: MyPulsHistoFiller.cpp  MyPulsHistoFiller.h
MyRootManager/: MyHistos_org.cpp
MySignalAnalyzer/: MySignalAnalyzer.h  MySoftTDC.h  MySoftTDCCFD.cpp  MySoftTDCCFD.h  MySoftTDCCoM.cpp  MySoftTDCCoM.h  baselineCorrection.cpp  helperfunctionsforSTDC.cpp
Projekt/: lma2root.vcproj  lma2root.vcxproj  lma2root.vcxproj.filters
ThreadStuff/: MySemaphore.h  MySoftTDCCFDWithNonWorkingThreats.cpp  MySoftTDCCoMWithNonWorkingThreats.h  MySoftTDCWithNonWorkingThreats.cpp
include/: resort64c.h
lma2root/: CMakeLists.txt
lma2root/MyArchive/: MyArchive.cpp
lma2root/MyDetektorHitSorter/: MyDetektorHitSorter.cpp  MyDetektorHitSorterAchimHex.cpp  MyDetektorHitSorterQuad.cpp  helperfunctionsforDetSorter.cpp
lma2root/MyEventViewer/: MyEventViewer.h
lma2root/MyFileProcessor/: MyFileProcessor.cpp
lma2root/MyRootManager/: MyHistos_org.h
lma2root/MySignalAnalyzer/: MySignalAnalyzer.cpp  MySoftTDC.h  MySoftTDCCFD.h  baselineCorrection.h
lma2root/Projekt/: lma2root.vcxproj
lma2root/ThreadStuff/: MyQueue.h  MySoftTDCWithNonWorkingThreats.h
lma2root/lib/: libResort64c-win.lib
src/: BinaryDump.cpp  BinaryDump.h  CMakeLists.txt  main.cpp
src/MyArchive/: MyArchive.cpp  MyArchive.h
src/MyDetektorHitSorter/: MyDetektorHitSorter.cpp  MyDetektorHitSorter.h  MyDetektorHitSorterAchim.cpp  MyDetektorHitSorterAchim.h  MyDetektorHitSorterAchimHex.cpp  MyDetektorHitSorterAchimHex.h  MyDetektorHitSorterAchimQuad.cpp  MyDetektorHitSorterAchimQuad.h  MyDetektorHitSorterHex.cpp  MyDetektorHitSorterHex.h  MyDetektorHitSorterQuad.cpp  MyDetektorHitSorterQuad.h  MyDetektorHitSorterSimple.cpp  MyDetektorHitSorterSimple.h  helperfunctionsforDetSorter.cpp  helperfunctionsforDetSorter.h
src/MyDetektorHitSorter/AchimsRoutine/: resort64c.h
src/MyEvent/MyOriginalEvent/: MyOriginalEvent.cpp  MyOriginalEvent.h  MyOriginalEventInfo.cpp  MyOriginalEventInfo.h
src/MyEvent/MyOriginalEvent/MyOriginalChannel/: MyOriginalChannel.cpp  MyOriginalChannel.h  MyOriginalChannelInfo.cpp  MyOriginalChannelInfo.h
src/MyEvent/MyOriginalEvent/MyPuls/: MyPuls.cpp  MyPuls.h
src/MyEvent/MySignalAnalyzedEvent/: MySignalAnalyzedEvent.cpp  MySignalAnalyzedEvent.h  MySignalAnalyzedEventInfo.cpp  MySignalAnalyzedEventInfo.h
src/MyEvent/MySignalAnalyzedEvent/MyPeak/: MyPeak.cpp  MyPeak.h
src/MyEvent/MySignalAnalyzedEvent/MySignalAnalyzedChannel/: MyChannelSection.cpp  MyChannelSection.h  MySignalAnalyzedChannel.cpp  MySignalAnalyzedChannel.h  MySignalAnalyzedChannelInfo.cpp  MySignalAnalyzedChannelInfo.h
src/MyEvent/MySignalAnalyzedEvent/MyVoltage/: MyVoltage.h
src/MyEvent/MySortedEvent/: MySortedEvent.cpp  MySortedEvent.h  MySortedEventInfo.cpp  MySortedEventInfo.h
src/MyEvent/MySortedEvent/MyDetektor/: MyDetektor.cpp  MyDetektor.h  MyDetektorHit.h  MyDetektorInfo.cpp  MyDetektorInfo.h  MyLayerProperty.cpp  MyLayerProperty.h  MyTimeRange.h
src/MyEvent/MySortedEvent/MyPunkt/: MyPunkt.h
src/MyEventViewer/: MyEventViewer.cpp  MyEventViewer.h
src/MyFileProcessor/: MyFileProcessor.cpp  MyFileProcessor.h
src/MyPulsHistoFiller/: MyPulsHistoFiller.cpp  MyPulsHistoFiller.h
src/MyRootManager/: MyHistos.cpp  MyHistos.h  MyRootManager.cpp  MyRootManager.h
src/MySettings/: MySettings.cpp  MySettings.h
src/MySignalAnalyzer/: MySignalAnalyzer.cpp  MySignalAnalyzer.h  MySoftTDC.h  MySoftTDCCFD.cpp  MySoftTDCCFD.h  MySoftTDCCoM.cpp  MySoftTDCCoM.h  baselineCorrection.cpp  baselineCorrection.h  helperfunctionsforSTDC.cpp  helperfunctionsforSTDC.h
src/ThreadStuff/: MyQueue.h  MySemaphore.h  MySoftTDCCFDWithNonWorkingThreats.cpp  MySoftTDCCFDWithNonWorkingThreats.h  MySoftTDCCoMWithNonWorkingThreats.cpp  MySoftTDCCoMWithNonWorkingThreats.h  MySoftTDCWithNonWorkingThreats.cpp  MySoftTDCWithNonWorkingThreats.h
